Fix two minor warnings